# Nyx

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
sandbox/: main.cpp
sandbox/shaders/: fragment.frag  vertex.vert
src/: Nyx.h  main.cpp
src/Core/: OrthographicCamera.cpp  OrthographicCamera.h  Window.cpp  Window.h
src/OpenGL/: GLFW.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Rendering/: Renderer2D.cpp  Renderer2D.h  Vertex.h
src/Utils/: FileToString.h  count.txt
